# advent-of-code

./: .env  .gitignore  README.md  requirements.txt
2020/day02/: Cargo.toml
2020/day1/src/: main.rs
2020/day2/src/: main.rs
2021/day01/: Cargo.toml
2021/day02/: Cargo.toml
2021/day02/src/: main.rs
2021/day03/: Cargo.toml
2021/day03/src/: main.rs
2021/day04/: Cargo.toml
2021/day04/src/: main.rs
2021/day05/: Cargo.toml
2021/day05/src/: main.rs
2021/day06/: Cargo.toml
2021/day06/src/: main.rs
2021/day07/: Cargo.toml
2021/day08/src/: main.rs
2021/day09/src/: main.rs
2021/day10/: Cargo.toml
2021/day10/src/: main.rs
2021/day11/src/: main.rs
2021/day12/: Cargo.toml
2021/day13/: Cargo.toml
2021/day14/: Cargo.toml
2021/day14/src/: main.rs
2021/day15/src/: main.rs
2021/day16/src/: main.rs
2021/day17/src/: main.rs
2021/day18/: Cargo.toml
2021/day18/src/: main.rs
2021/day19/src/: main.rs
2021/day20/: Cargo.toml
2021/day20/src/: main.rs
2021/day21/: Cargo.toml
2021/day21/src/: main.rs
2021/day22/src/: main.rs
2021/day23/: Cargo.toml
2021/day24/: Cargo.toml
2021/day24/src/: main.rs
2021/day25/: Cargo.toml
2022/day01/: Cargo.toml
2022/day01/src/: main.rs
2022/day02/src/: main.rs
2022/day03/: Cargo.toml
2022/day03/src/: main.rs
2022/day04/: Cargo.toml
2022/day04/src/: main.rs
2022/day05/: Cargo.toml
2022/day05/src/: main.rs
2022/day06/: Cargo.toml
2022/day07/src/: main.rs
2022/day08/src/: main.rs
2022/day09/src/: main.rs
2022/day10/: Cargo.toml
2022/day10/src/: main.rs
2022/day11/: Cargo.toml
2022/day11/src/: main.rs
2022/day12/: Cargo.toml
2022/day12/src/: main.rs
2022/day13/: Cargo.toml
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day15/: Cargo.toml
2022/day15/src/: main.rs
2022/day16/: Cargo.toml
2022/day16/src/: main.rs
2022/day17/src/: main.rs
2022/day18/: Cargo.toml
2022/day18/src/: main.rs
2022/day20/src/: main.rs
2022/day21/: Cargo.toml
2022/day21/src/: main.rs
2022/day22/src/: main.rs
2023/01/: solution.py  state.json
2023/02/: solution.py  state.json
2023/03/: sample  solution.py
2023/04/: solution.py
2023/05/: sample  solution.py
2023/06/: sample  solution.py
2023/07/: sample  solution.py
2023/08/: sample_2  solution.py  state.json
2023/09/: sample  solution.py
2023/10/: sample_1a  sample_2  solution.py
2023/11/: sample  sample_1a  sample_1b  sample_2  solution.py
2023/12/: sample  solution.py
2023/13/: sample  solution.py
2023/14/: solution.py
2023/15/: solution.py
2023/16/: solution.py  state.json
2023/17/: solution.py
2023/18/: sample  solution.py  state.json
2023/19/: sample  solution.py  state.json
2023/20/: sample  solution.py
2023/21/: solution.py  state.json
2023/22/: solution.py  state.json
2023/23/: solution.py  state.json
2023/24/: sample  solution.py
2023/25/: sample  solution.py
2024/: README.md
kotlin/: README.md  build.gradle.kts
kotlin/src/: Utils.kt
python/2022/21/: sample
python/2023/01/: sample  solution.py
python/2023/02/: sample  solution.py
python/template/: solution.py
python/utils/: interval_utils.py
rust/2021/day08/: Cargo.toml
rust/2021/day19/: Cargo.toml
rust/2022/day14/: Cargo.toml
utils/: __init__.py  utils.py
(+202 files in other folders)
