[package]
name = "day2"
version = "0.1.0"
authors = ["Severin Kistler <kistler@ubique.ch>"]
description = "advent of code 2020 day2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { path = "/Users/sk/.terminal-magic/zsh/advent-of-rust/elf"}
