[package]
name = "day20-2021"
version = "0.1.0"
authors = ["Severin Kistler <kistler@ubique.ch>"]
description = "advent of code 2021 day20"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { path = "/Users/sk/.terminal-magic/zsh/advent-of-rust/elf"}
itertools = "0.10.3"
