[package]
name = "day15-2022"
version = "0.1.0"
authors = ["Severin Kistler <kistlerseverin@gmail.com>"]
description = "advent of code 2022 day15"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { path = "/Users/sk/.terminal-magic/zsh/advent-of-rust/elf" }
geos = { version = "8.1.0", features = ["geo", "v3_7_0"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
