[package]
name = "day8-2021"
version = "0.1.0"
authors = ["Severin Kistler <kistler@ubique.ch>"]
description = "advent of code 2021 day8"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = { path = "/Users/sk/.terminal-magic/zsh/advent-of-rust/elf"}
grouping_by = "0.2.2"
